results/SVCOMP/4-shot/log-ExSymExeSimple-2024_03_18_22_15_40.txt
class Main {
  static class Node {
    /*@ public normal_behavior
      @    requires true;
      @    ensures \result <==> a <= b;
      @*/
    public boolean test(int a, int b) {

      if (a > b) {
        return false;
      } else if (a == b) System.out.println("eq");
      else
        System.out.println("<");
      return true;
    }
  }

  /*@ public normal_behavior
    @    requires arg < Integer.MAX_VALUE;
    @    ensures \result <==> (new Node()).test(arg, arg + 1);
    @*/
  public static boolean f(int arg) {
    if (arg >= Integer.MAX_VALUE) return true;
    Main inst = new Main();
    Node n = new Node();
    return n.test(arg, arg + 1);
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSimple.java:20: error: Object allocation is not permitted in specification expressions
    @    ensures \result <==> (new Node()).test(arg, arg + 1);
                               ^
1 error

